# Fluxus

./: .gitignore  250922.cpp  250922.py  250922_minimal.cpp  250922_minimal.py  250922_simple.cpp  250922_simple.py  CHANGELOG.md  CHECKLIST.md  COMPILATION_VERIFICATION_REPORT.md  COMPILER_FIXES_SUMMARY.md  FINAL_FLUXUS_TESTING_REPORT.md  FINAL_PYTHON_CPP_VERIFICATION.md  FINAL_VERIFICATION_REPORT.md  FIXES_COMPLETED.md  FIXES_SUMMARY.md  FLUXUS_PROJECT_REPORT.md  FLUXUS_TESTING_REPORT.md  GO_IMPORT_TESTS_SUMMARY.md  GO_PACKAGE_TESTS_SUMMARY.md  GO_SYNTAX_COVERAGE_REPORT.md  GO_TEST_SUMMARY.md  HOW_TO_VERIFY.md  NESTED_TOSTRING_SOLUTION.md  NESTED_TO_STRING_ERROR_SOLUTION.md  PACKAGE_DECLARATION_TESTS.md  PROJECT_IMPROVEMENTS_ANALYSIS.md  PYTHON_COVERAGE_QUICK_REF.md  PYTHON_CPP_COMPILATION_VERIFICATION.md  PYTHON_CPP_VERIFICATION_REPORT.md  PYTHON_SYNTAX_COVERAGE.md  PYTHON_SYNTAX_COVERAGE_VERIFICATION.md  PYTHON_TEST_COVERAGE_SUMMARY.md  PYTHON_TEST_INDEX.md  PYTHON_TEST_SUMMARY.md  QUICK_REFERENCE.md  README.md  RealParserTest.hs  TEST_IMPROVEMENTS_SUMMARY.md  TEST_STRATEGY.md  (+762 more)
.github/workflows/: ci.yml  stack-test.yml
.qoder/: settings.json
app/: Main.hs
bench/: Bench.hs
examples/go/: advanced_algorithms.go  advanced_algorithms_suite.go  advanced_calculator.go  advanced_concurrency_patterns.go  advanced_data_structures.go  advanced_data_structures_algorithms.go  advanced_fibonacci_suite.go  advanced_file_analyzer.go  advanced_mathematical_operations.go  advanced_systems.go  advanced_systems_comprehensive.go  advanced_text_analyzer.go  algorithms_comprehensive.go  algorithms_demo.go  bank_server.go  banking_system.go  basic_algorithms.go  basic_functions.go  calculator.go  complex_structures.go  comprehensive_algorithms.go  comprehensive_data_structures.go  comprehensive_sorting_suite.go  concurrency_advanced.go  concurrency_patterns.go  data_structures.go  data_structures_comprehensive.go  distributed_cache.go  fibonacci_basic.go  fibonacci_go  fibonacci_iterative.go  fibonacci_simple.go  fibonacci_working.go  file_analyzer.go  file_system_analyzer.go  filesystem_analyzer.go  graph_algorithms.go  hello_simple.go  hello_test.go  json_processor.go  (+34 more)
examples/package_examples/: 01_package_main.go  02_package_library.go  03_package_with_underscore.go  04_package_with_imports.go  05_package_with_types.go  06_standard_library_style.go  README.md
examples/python/: advanced_algorithms.py  advanced_algorithms_suite.py  advanced_calculator.py  advanced_concurrency_patterns.py  advanced_data_science.py  advanced_data_structures_algorithms.py  advanced_fibonacci_suite.py  advanced_mathematical_operations.py  advanced_ml_pipeline.py  advanced_sorting_benchmark.py  advanced_systems.py  algorithms_comprehensive.py  algorithms_demo.py  async_programming_advanced.py  async_web_scraper.py  async_web_scraper_advanced.py  basic_fibonacci.py  basic_math.py  comprehensive_algorithms.py  comprehensive_data_structures.py  comprehensive_sorting_suite.py  comprehensive_utilities.py  cryptocurrency_trading_engine.py  cryptography.py  data_processing_demo.py  data_structures.py  distributed_cache_system.py  (+64 more)
executable/: Main.hs  README.md
scripts/: batch_test_compile.sh  cabal-tests.sh  check-coverage.sh  compile_all_py.sh  doctest.sh  enhanced-stack-test.sh  hlint.sh  ormolu-check.sh  quality-gate.sh  run-tests.sh  run_go_parser.hs  stan.sh  test_all_compile.sh  verify_all_py.sh  weeder.sh
temp_verification_tests/: test_01_simple_print.cpp
test/: Aggregate.hs  README.md  Spec.hs  python-testsoutput  test-runner.js
test_dir_scanning/: test1.cpp  test1.py  test2.cpp  test2.py
test_outputs/: feature_exception_out  feature_exception_output.txt  feature_list_comprehension_output.txt  test_empty_out  test_functions_output.txt  test_just_number_out  test_loops_out  test_loops_output.txt  test_print_out  test_print_output.txt
test_verify/: test3.cpp
tests/: test_arithmetic.go  test_arithmetic.py  test_arithmetic_go_compiled  test_simple_func.go  test_simple_func.py  test_simple_func_go_compiled
(+472 files in other folders)
