cabal-version: 3.0
name: fluxus
version: 0.1.0.0
synopsis: High-performance hybrid C++ AOT compiler for Python and Go
description: Fluxus is an experimental hybrid Ahead-of-Time (AOT) compiler 
             that translates high-level languages (initially Python and Go) into 
             highly optimized modern C++ (C++20/23) while maintaining full language 
             compatibility through runtime interoperability.
license: Apache-2.0
license-file: LICENSE
author: Fluxus Team
maintainer: fluxus@example.com
copyright: 2024 Fluxus Team
category: Compiler
build-type: Simple
extra-source-files: CHANGELOG.md, README.md

common shared-properties
  default-language: Haskell2010
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
               -Wincomplete-uni-patterns -Wmissing-export-lists
               -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
               -Wno-unused-imports -Wno-unused-top-binds -Wno-unused-matches
               -Wno-unused-local-binds -Wno-name-shadowing -Wno-unused-do-bind
               -O2

library
  import: shared-properties
  hs-source-dirs: src
  exposed-modules:
    Fluxus.AST.Common
    Fluxus.AST.Python
    Fluxus.AST.Go
    Fluxus.Parser.Python.Lexer
    Fluxus.Parser.Python.Parser
    Fluxus.Parser.Go.Lexer
    Fluxus.Parser.Go.Parser
    Fluxus.Analysis.TypeInference
    Fluxus.Analysis.EscapeAnalysis
    Fluxus.Analysis.ShapeAnalysis
    Fluxus.Analysis.OwnershipInference
    Fluxus.Optimization.Monomorphization
    Fluxus.Optimization.Devirtualization
    Fluxus.CodeGen.CPP
    Fluxus.CodeGen.Go
    Fluxus.Runtime.Python
    Fluxus.Runtime.Go
    Fluxus.Compiler.Driver
    Fluxus.Compiler.Config
    Fluxus.Utils.Pretty
    Fluxus.Utils.Graph
  other-modules:
    Fluxus.Internal.Types
    Fluxus.Internal.Monad
  build-depends:
    base >= 4.17 && < 5,
    containers >= 0.6.7,
    text >= 2.0,
    bytestring >= 0.11,
    mtl >= 2.3,
    transformers >= 0.6,
    parsec >= 3.1.16,
    megaparsec >= 9.5,
    parser-combinators >= 1.3,
    prettyprinter >= 1.7,
    prettyprinter-ansi-terminal >= 1.1,
    hashable >= 1.4,
    unordered-containers >= 0.2.19,
    vector >= 0.13,
    array >= 0.5,
    deepseq >= 1.4,
    filepath >= 1.4,
    directory >= 1.3,
    process >= 1.6,
    temporary >= 1.3,
    optparse-applicative >= 0.17,
    aeson >= 2.1,
    yaml >= 0.11,
    scientific >= 0.3,
    lens >= 5.2,
    fgl >= 5.8,
    monad-logger >= 0.3.40,
    fast-logger >= 3.2,
    ansi-terminal >= 1.1,
    time >= 1.12,
    stm >= 2.5,

executable fluxus
  import: shared-properties
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
    base,
    fluxus,
    optparse-applicative,
    text,
    monad-logger
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite fluxus-test
  import: shared-properties
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
    Test.Fluxus.Parser.Python
    Test.Fluxus.Parser.Go
    Test.Fluxus.Analysis.TypeInference
    Test.Fluxus.CodeGen.CPP
  build-depends:
    base,
    fluxus,
    hspec >= 2.10,
    QuickCheck >= 2.14,
    text,
    containers
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

benchmark fluxus-bench
  import: shared-properties
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is: Bench.hs
  build-depends:
    base,
    fluxus,
    criterion >= 1.6,
    text,
    deepseq
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

executable test-python-lexer
  import: shared-properties
  main-is: debug_python_lexer.hs
  hs-source-dirs: .
  build-depends:
    base,
    fluxus,
    text,
    megaparsec,
    parser-combinators
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

executable test-python-parser
  import: shared-properties
  main-is: test-debug.hs
  hs-source-dirs: .
  build-depends:
    base,
    fluxus,
    text,
    megaparsec,
    parser-combinators
  ghc-options: -threaded -rtsopts -with-rtsopts=-N